# SFTool

./: Cargo.toml  README.md
Python/: debug_chunk.py  sf2_loc_tool_cff.py
ui/: app.slint
