[package]
name = "SFTool"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.17.0"
byteorder = "1.5.0"
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
encoding_rs = "0.8.35"
rfd = "0.17.2"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.17.0"
